<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCad"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnCad"
        app:layout_constraintBottom_toTopOf="@+id/btnPesq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPesq"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnPesq"
        app:layout_constraintBottom_toTopOf="@+id/btnLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCad" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPesq" />
</android.support.constraint.ConstraintLayout>